kotlin-ide/idea/testData/checker/regression/FunDeclarationAfterDot.kt
class A

fun f() {
    A.<error>fun <error>g</error>() {
        <error descr="[UNRESOLVED_REFERENCE] Unresolved reference: g">g</error>()
    }</error>
}
